<resources>
    <string name="app_name">Vyzývačky 2.1</string>

    <!-- Login screen -->
    <string name="login_game_code">game code</string>
    <string name="login_password">password</string>
    <string name="login_button">Log In</string>
    <string name="login_qr_button">Log In with QR code</string>
    <string name="login_qr_prompt">"Place a game barcode inside the viewfinder rectangle to scan it"</string>

    <string name="error_pass_length">Password must be at least 4 characters long</string>
    <string name="error_auth">Game code or password are incorrect</string>
    <string name="error_qr_wrong">Scanned QR code is not a game code</string>
    <string name="error_qr_damaged">Scanned QR code is damaged, please retry</string>

    <!-- Splash screen -->
    <string name="splash">TYMIAN 2021</string>
    <string name="splash_placeholder">…</string>
    <string name="splash_loading">Loading…</string>
    <string name="splash_logging">Logging in…</string>

    <!-- Match fragment screen -->
    <string name="match_tooltip">Create a match:</string>
    <string name="match_winner">Winner:</string>
    <string name="match_looser">Looser:</string>
    <string name="match_submit">Submit</string>

    <!-- Competitors fragment screen -->
    <string-array name="competitors_header">
        <item>ID</item>
        <item>First name</item>
        <item>Last name</item>
        <item>Team</item>
        <item>Color</item>
    </string-array>
    <string name="competitors_error">No database imported</string>

    <!-- Log fragment screen -->
    <string-array name="log_header">
        <item>ID</item>
        <item>Time</item>
        <item>Winner</item>
        <item>Looser</item>
        <item>Sent</item>
    </string-array>
    <string name="log_error">No entries to show</string>

    <!-- Drawer menu -->
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <string name="drawer_code_placeholder">Game code</string>
    <string name="drawer_pass_placeholder">Show game password</string>

    <string name="drawer_view_matchmaking">Matchmaking</string>
    <string name="drawer_view_database">Competitors</string>
    <string name="drawer_view_log">Match log</string>
    <string name="drawer_import">Import game data</string>
    <string name="drawer_export">Export game data</string>
    <string name="drawer_qr_code">Show game QR code</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_about">About</string>

    <string name="drawer_connection_ok">Status: Connected</string>
    <string name="drawer_connection_ko">Status: Connection lost</string>

    <string name="drawer_logout">Log out</string>

    <!-- QrCode screen -->
    <string name="qr_description">Scannable game QR code</string>

    <!-- Toasts -->
    <string name="dummy_text"> </string>
    <string name="placeholder_text">Template</string>
    <string name="not_imported">Import a database before use</string>

    <string name="import_ok">Import successful</string>
    <string name="import_ko">Import failed</string>
    <string name="export_ok">Export successful</string>
    <string name="export_ko">Export failed</string>

    <string name="error_connection">No internet connection</string>
    <string name="error_server">Could not connect to server</string>
    <string name="error_timeout">Connection timeout</string>

    <string name="entry_added">Súboj bol zaznamenaný</string>
    <string name="entry_failed">Chyba! Súboj nebol zaznamenaný</string>

    <string name="id">ID</string>
    <string name="time">Time</string>

</resources>
