<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawerHeader"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom">

    <ImageView
            android:id="@+id/headerQrImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/drawer_qr_code" />

    <TextView
            android:id="@+id/headerCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/drawer_code_placeholder"
            android:textColor="@android:color/white" />

    <TextView
            android:id="@+id/headerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:padding="15dp"
            android:text="@string/drawer_pass_placeholder"
            android:textColor="@android:color/white" />
</LinearLayout>